<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ainakay.gpcalculator.MainActivity">
    <LinearLayout
       android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="30dp" >
      <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/courses" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:text="@string/grade"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/units" />
                       </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:text="@string/course1" />

        <Spinner
            android:id="@+id/course1un"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:drawable/btn_dropdown" >
         </Spinner>

        <Spinner
            android:id="@+id/course1gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:text="@string/course2" />

        <Spinner
            android:id="@+id/course2un"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown">

        </Spinner>

        <Spinner
            android:id="@+id/course2gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:text="@string/course3" />

        <Spinner
            android:id="@+id/course3un"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown">

        </Spinner>

        <Spinner
            android:id="@+id/course3gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:text="@string/course4" />

        <Spinner
            android:id="@+id/course4un"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown">

        </Spinner>

        <Spinner
            android:id="@+id/course4gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:text="@string/course5" />

        <Spinner
            android:id="@+id/course5un"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown">

        </Spinner>

        <Spinner
            android:id="@+id/course5gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:text="@string/course6" />

        <Spinner
            android:id="@+id/course6un"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown">
        </Spinner>

        <Spinner
            android:id="@+id/course6gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="16dp"
                android:text="@string/course7" />

            <Spinner
                android:id="@+id/course7un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown">
            </Spinner>

            <Spinner
                android:id="@+id/course7gr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="16dp"
                android:text="@string/course8" />

            <Spinner
                android:id="@+id/course8un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown">
            </Spinner>

            <Spinner
                android:id="@+id/course8gr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="16dp"
                android:text="@string/course9" />

            <Spinner
                android:id="@+id/course9un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown">
            </Spinner>

            <Spinner
                android:id="@+id/course9gr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#869"
            android:padding="25dp"
            android:text="@string/submit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/submit"
            android:onClick="onClick"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textStyle="bold"
                android:text="0"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/show"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textStyle="bold"
                android:id="@+id/show1"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textStyle="bold"
            android:id="@+id/show2"
            />
    </LinearLayout>
</ScrollView>
